# rust_telegram_bot

./: Cargo.toml  README.md
src/: api_client.rs  commands.rs  core.rs  http_client.rs  http_clients.rs  main.rs  types.rs
src/api_client/: api_client.rs  mod.rs  types.rs
src/commands/: echo.rs
src/core/: bot.rs  command_registry.rs  commands.rs
src/types/: bot.rs  chat.rs  entities.rs  message.rs  user.rs
