[package]
name = "rust_telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
futures-core = "0.3.31"
futures-util = "0.3.31"
pyo3 = "0.27.1"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
